fdo#75970: Let's do it in a straightforward fashion.

No idea what the intent of this weird static heap instantiation, but
apparently it's not helping us.

Change-Id: If6cccf649958b6cf01ede992c286af68eaeb31f6